@@ -3,13 +3,20 @@ Changes in 3.4
 * an ftp filesystem for the vfs (vfs.ftpfs).
 * a very simple xhtml generation library (ecs, named
   after Apache's similarly named Java library).
-* a library for processing and managing html forms (formlib).
+* a library for processing and managing html forms (formlib);
+  although new, this may be retired in favor of using Ian Bicking's 
+  FunFormKit.
 * an xmlrpc support module (xmlrpchandler).
 * support for scoping on server port (SERVER_PORT).
 * fixes for PyDO and swcgi.
 * <:url:> now has an "abs" option which will generate
   absolute urls.
-* rewrite hook changed by default (revisit this!!).
+* substantial enhancements to rewrite service, which now
+  permits nested (conditional) rules, and performs faster.
+* support for pypgsql postgresql driver for SkunkWeb and PyDO.
+* alternate PyDO implementation (PyDO.PyDO2) with new-style classes
+  (hence Python 2.2+ only).  Permits attribute-style access to
+  columns.
 
 Changes in 3.3 
 ======================================== 
